# world-model

./: .gitignore  mask_coords.json  models.py  precompute_seg.py  priority_coords.json  pyproject.toml  train_transformer.py  train_vae.py  train_vqvae.py
models/: vae.py
scripts/: select_mask.py  select_priority.py
