[project]
name = "dreamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "filelock==3.20.3",
    "fsspec==2026.1.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.1",
    "opencv-python==4.13.0.90",
    "pillow==12.1.0",
    "sympy==1.14.0",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "transformers>=4.40",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "setuptools>=82.0.1",
    "tensorboard>=2.20.0",
    "lpips>=0.1.4",
    "pandas>=3.0.1",
]
